[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
actix-web = "4.0.0"
actix-cors = "0.6.0"
actix-multipart = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.0"
dotenv = "0.15.0"
rand = "0.8.5"
rusqlite = "0.28.0"
uuid = { version = "1.3.4", features = ["v4"] }